--- a/DragViewLayout/DragView/src/main/AndroidManifest.xml
+++ b/DragViewLayout/DragView/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:supportsRtl="true">
     <activity
         android:name=".DragViewActivity"
-        android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+        android:theme="@style/DragViewTheme"
         />
     </application>
 
