--- a/DragViewLayout/app/build.gradle
+++ b/DragViewLayout/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.yanxuwen.dragviewlayout"
-        minSdkVersion 11
-        targetSdkVersion 25
+        minSdkVersion 15
+        targetSdkVersion 29
         versionCode 1
+        versionName "1.0"
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -17,16 +18,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
-    compile project(path: ':DragView')
-    compile 'com.github.bumptech.glide:glide:4.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':DragView')
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.+'
+
 
 }
