--- a/DragViewLayout/DragView/src/main/AndroidManifest.xml
+++ b/DragViewLayout/DragView/src/main/AndroidManifest.xml
@@ -3,11 +3,6 @@
     package="com.yanxuwen.dragview">
 
     <application android:allowBackup="true"
-        android:supportsRtl="true">
-    <activity
-        android:name=".DragViewActivity"
-        android:theme="@style/DragViewTheme"
-        />
-    </application>
+        android:supportsRtl="true"></application>
 
 </manifest>
