--- a/DragViewLayout/app/build.gradle
+++ b/DragViewLayout/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.yanxuwen.dragviewlayout"
-        minSdkVersion 15
-        targetSdkVersion 29
+        minSdkVersion 21
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         versionName "1.0"
@@ -27,8 +27,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':DragView')
-    implementation 'com.github.bumptech.glide:glide:4.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.+'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 
 
 }
