--- a/DragViewLayout/app/build.gradle
+++ b/DragViewLayout/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation project(path: ':DragView')
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
 
 }
