--- a/DragViewLayout/DragView/build.gradle
+++ b/DragViewLayout/DragView/build.gradle
@@ -26,6 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
 def siteUrl = 'https://github.com/yanxuwen/DragView'      // 项目的主页
 def gitUrl = 'https://github.com/yanxuwen/DragView.git'      // Git仓库的url
