--- a/DragViewLayout/app/build.gradle
+++ b/DragViewLayout/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
 
 }
