--- a/DragViewLayout/DragView/build.gradle
+++ b/DragViewLayout/DragView/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
 }
 def siteUrl = 'https://github.com/yanxuwen/DragView'      // 项目的主页
 def gitUrl = 'https://github.com/yanxuwen/DragView.git'      // Git仓库的url
@@ -98,7 +99,7 @@ bintray {
     }
 }
 javadoc {
-    options{
+    options {
         encoding "UTF-8"
         charSet 'UTF-8'
         author true
